--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,6 +60,29 @@ services:
       - "${TRAEFIK_NETWORK}"
       - "default"
 
+  samba:
+    image: dperson/samba
+    container_name: "samba"
+    environment:
+      TZ: ${TIMEZONE}
+    networks:
+      - default
+    ports:
+      - "137:137/udp"
+      - "138:138/udp"
+      - "139:139/tcp"
+      - "445:445/tcp"
+    read_only: true
+    tmpfs:
+      - /tmp
+    restart: ${RESTART_POLICY}
+    stdin_open: true
+    tty: true
+    volumes:
+      - ${SAMBA_VOLUME}:/mnt
+#      - ${SAMBA_CONFIG:/etc/samba/smb.conf}
+    command: '${SAMBA_COMMAND}'
+
   plex:
     image: lscr.io/linuxserver/plex
     container_name: plex
